welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:4: error: not found: value mmin
		if (nums(i)== 9) mmin = min +1
                                 ^